// user-service/proto/user/user.proto
syntax = "proto3";

package go.micro.srv.user;

service UserService {
	// 创建用户
	rpc Create (User) returns (Response) {
	}

	rpc Get (User) returns (Response) {
	}

	rpc GetAll (Request) returns (Response) {
	}

	rpc Auth (User) returns (Token) {
	}

	rpc ValidateToken (Token) returns (Token) {
	}
}

// 用户信息 
message User {
	string Id        = 1; //编号
	string Name      = 2; //名字
	string Company   = 3; //
	string Email     = 4; //
	string Password  = 5; //
}

// 
message Request {
}

message Response {
	User User              = 1; //
	repeated User Users    = 2;
	repeated Error Errors  = 3;
}

message Token {
	string Token  = 1;
	bool valid    = 2;
	Error errors  = 3;
}

message Error {
	int32 Code          = 1;
	string Description  = 2;
}

